--- a/mongoseCard/package.json
+++ b/mongoseCard/package.json
@@ -9,7 +9,8 @@
   },
   "dependencies": {
     "ejs": "^3.1.10",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "mongoose": "^9.1.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
